syntax = "proto3";

option go_package = "./";
package user;

service user {
    rpc GetUsers(GetRequest) returns (GetResponse) {}
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;

    message Address {
        string  street = 1;
        string  city = 2;
        string state = 3;
        string country = 4;
    }

    repeated Address address = 4;
}

message GetRequest {
    string keyword = 1;
}

message GetResponse {
    string status = 1;
    repeated User users = 2;
}
